public/scss/nav.scss
.nav__container {
  height: 100vh;
  width: 100vw;
  position: fixed;
  top:0;
  left:0;
  z-index: 1;
  visibility: hidden;
  font-family: 'Source sans pro', Arial, sans-serif;
  font-weight: 600;
  color: white;

  &--active {
    visibility: visible;

    .nav__item {
      transform: translateY(0);
      opacity: 1;
      transition-duration: 0.2s;
    }

    .nav__toggle::before {
      transform: scale(50);
      transition-delay: 0s;
      transition-timing-function: ease-in;
    }

    .nav__toggle .top {
      transform: translateY(8px) rotateZ(45deg);
    }

    .nav__toggle .bottom {
      transform: translateY(-8px) rotateZ(-45deg);
    }

    .nav__toggle .middle {
      width: 0;
    }
  }
}

.nav__toggle {
  width: 48px;
  height: 48px;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 1;
  visibility: visible;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;

  .bar  {
    height: 3px;
    width: 24px;
    display: block;
    margin: 5px auto;
    background-color: white;
    transition: all 0.4s ease;
  }

  &::before {
    content: '';
    width: 48px;
    height: 48px;
    z-index: -1;
    border-radius: 50%;
    transform: translateZ(0);
    backface-visibility: hidden;
    transform: scale(1);
    background-color: black;
    transform-origin: center 30%;
    transition: all ease-out 0.3s;
    transition-delay: 0.35s;
  }
}

.nav__toggleIcon {
  position: fixed;
  font-size: 36px;
  color: white;
}

.nav {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.nav__item {
  padding: 12px 0;
  opacity: 0;
  z-index: 3;
  transform: translateY(100px);
  transition: all ease 0.3s;
  font-size: 48px;

  @for $i from 1 through 5 {
    &:nth-child(#{$i}) {
      transition-delay: $i * .1s;
    }
  }
}

.nav__itemLink {
  position: relative;
  text-decoration: none;
  text-transform: capitalize;
  background-image: linear-gradient(to left, #134E5E , #71B280);
  color: rgba(255,255,255,1);
  -webkit-background-clip: text;
  transition: all ease 0.5s;

  &::before {
    content:'';
    width: 0%;
    height: 100%;
    position: absolute;
    left: -10px;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
    background-color: black;
    transition: all ease-out 0.5s;
  }

  &:hover::before{
    width: calc(100% + 20px);
  }

  &:hover {
    color: rgba(255,255,255,0);
  }
}

